# prime-actions

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  lint-and-test.yml  release-drafter.yml  release.yml
scripts/: actionlint.py
src/prime_actions/: commenter.py  github_api.py  main.py  models.py  scanner.py
tests/: conftest.py  test_commenter.py  test_github_api.py  test_main.py  test_scanner.py
