[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prime-actions"
version = "1.0.0"
description = "GitHub Action that scans PR diffs for password occurrences and comments on flagged lines"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.0",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prime_actions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
